added paragraph about code style

--- a/perl/popis_reseni.tex
+++ b/perl/popis_reseni.tex
@@ -99,6 +99,12 @@ použil jsem ji i pro výstup při chybových hláškách a přepínače help.
 Uznávám tedy tuto jazykovou dualitu a jistě bych neměl problém
 psát kód česky nebo naopak manuál napsat v angličtině.
 
+\par A i v rámci stylu není kód 100\% konzistentní, protože jsem
+se Perl učil za běhu, přebíral některé zvykolsti, které jsem
+pochytil, a přirozeně je kombinoval se svými zvyky a preferencemi.
+Stejně tady bych neměl problém se naučit stylu, který je preferovaný
+v týmu. V jazycích, které znám lépe píši kód čistěji.
+
 \par Na závěr bych zmínil pár možných rozšíření: přepínač na vypnutí
 ignorovacího souboru, přepínač na zadání vlastní cesty k ignorovacímu
 souboru a možnost ztotožnit více tavrů jednoho slova podle přidaného
